@@ -1,6 +1,11 @@
 20xx-xx-xx  TODO
 	* setf-values
 
+2011-09-29  bowbow99  <bowbow99@gmail.com>
+
+	* print-unreadable-object を追加
+
+
 2011-08-24  bowbow99  <bowbow99@gmail.com>
 
 	* マクロをいくつか autoload するようにした
